--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,8 @@ img { display: block;
   line-height: 1.5; 
   letter-spacing: 0.02em; 
   color: #2e2f42;
+
+  transition: color 250 cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -300,6 +302,7 @@ img { display: block;
 .page-header{
   border-bottom: 1px solid #e7e9fc;
   background: #fff;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
