--- a/css/styles.css
+++ b/css/styles.css
@@ -187,19 +187,13 @@ border: none;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.button:hover,
 .button:focus {
-background-color: #404BBF;
-}
-
-.button:hover {
     color: #fff;
     background-color: #404bbf;
 }
 
-                    /* advantages */
-
-
-
+  /* advantages */
 
 .visually-hidden {
     position: absolute;
@@ -260,6 +254,10 @@ background-color: #404BBF;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icons-social-networks:hover,
+.icons-social-networks:focus {
+  background-color: #404bbf;
+}
 
                     /* footer */
 .page-footer {
@@ -379,11 +377,6 @@ background-color: #404BBF;
   height: 40px;
 }
 
-
-.icons-social-networks a:hover,
-.icons-social-networks a:focus {
-  background-color: #404bbf;
-}
 
 /* ===== Portfolio grid ===== */
 .card-set-portfolio {
